--- a/NguyenHongHiepWPF/LoginWindow.xaml
+++ b/NguyenHongHiepWPF/LoginWindow.xaml
@@ -13,7 +13,7 @@
         <Grid HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="250"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -25,8 +25,8 @@
             <TextBox x:Name="txtEmail" Grid.Row="0" Grid.Column="1" TabIndex="0" />
             <Label Grid.Row="1" Grid.Column="0" Content="Password:"/>
             <PasswordBox x:Name="txtPassword" Grid.Row="1" Grid.Column="1" TabIndex="1" />
-            <Button x:Name="btnSignIn" Grid.Row="2" Grid.Column="1" Content="Sign In" 
-                    Width="200" Margin="0 5" TabIndex="2"/>
+            <Button x:Name="btnSignIn" Grid.Row="2" Grid.Column="1" Content="Sign In" HorizontalAlignment="Right"
+                    Width="70" Margin="0 5" TabIndex="2" Click="btnSignIn_Click"/>
         </Grid>
         
     </StackPanel>
