added admin and customer dashboard window

--- a/NguyenHongHiepWPF/App.xaml
+++ b/NguyenHongHiepWPF/App.xaml
@@ -10,6 +10,7 @@
             <Setter Property="FontSize" Value="15"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="MinHeight" Value="25"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
         <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="15"/>
