designed customer management window

--- a/NguyenHongHiepWPF/Admin/AdminDashboardWindow.xaml
+++ b/NguyenHongHiepWPF/Admin/AdminDashboardWindow.xaml
@@ -16,7 +16,7 @@
     </Window.Resources>
     
     <StackPanel>
-        <Button x:Name="btnCustomer" Content="Customer Management" />
+        <Button x:Name="btnCustomer" Content="Customer Management" Click="btnCustomer_Click" />
         <Button x:Name="btnCar" Content="Car Management" />
         <Button x:Name="btnRenting" Content="Renting Management" />
         <Button x:Name="btnReport" Content="Statistic Report" />
