--- a/NguyenHongHiepWPF/App.xaml
+++ b/NguyenHongHiepWPF/App.xaml
@@ -11,6 +11,7 @@
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="MinHeight" Value="25"/>
             <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Padding" Value="10 5"/>
         </Style>
         <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="15"/>
