--- a/NguyenHongHiepWPF/CustomerManagement/CustomerManagementWindow.xaml
+++ b/NguyenHongHiepWPF/CustomerManagement/CustomerManagementWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NguyenHongHiepWPF.CustomerManagement"
-        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="CustomerManagementWindow" Height="500" Width="800">
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded"
+        Closing="Window_Closing"
+        Title="CustomerManagementWindow" Height="500" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,16 +23,28 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Label Content="Search by name:" />
                 <TextBox x:Name="txtSearchValue" Width="300" />
-                <Button x:Name="btnSearch" Content="Search" Margin="10 0"/>
+                <Button x:Name="btnSearch" Content="Search" Margin="10 0" Click="btnSearch_Click"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnReload" Content="Reload" Margin="20 10" />
+                <Button x:Name="btnReload" Content="Reload" Margin="20 10" Click="btnReload_Click" />
                 <Button x:Name="btnCreate" Content="Create" Margin="20 10" />
                 <Button x:Name="btnUpdate" Content="Update" Margin="20 10" />
                 <Button x:Name="btnDelete" Content="Delete" Margin="20 10" />
             </StackPanel>
         </StackPanel>
-        <ListView x:Name="lvCustomers" Grid.Row="1" Grid.Column="0" />
-        <Button x:Name="btnBack" Grid.Row="2" Grid.Column="0" Content="Back" Width="60" HorizontalAlignment="Right" Margin="20 5" />
+        <ListView x:Name="lvCustomers" Grid.Row="1" Grid.Column="0" 
+                  ItemsSource="{Binding Customers, Mode=TwoWay}" SelectedItem="{Binding SelectedCustomer}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="ID" Width="50" DisplayMemberBinding="{Binding CustomerId}" />
+                    <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding CustomerName}" />
+                    <GridViewColumn Header="Telephone" Width="150" DisplayMemberBinding="{Binding Telephone}" />
+                    <GridViewColumn Header="Email" Width="300" DisplayMemberBinding="{Binding Email}" />
+                    <GridViewColumn Header="Birthday" Width="150" DisplayMemberBinding="{Binding CustomerBirthday}" />
+                    <GridViewColumn Header="Status" Width="150" DisplayMemberBinding="{Binding CustomerStatus}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Button x:Name="btnBack" Grid.Row="2" Grid.Column="0" Content="Back" Width="60" HorizontalAlignment="Right" Margin="20 5" Click="btnBack_Click" />
     </Grid>
 </Window>
