--- a/NguyenHongHiepWPF/CustomerManagement/CustomerManagementWindow.xaml
+++ b/NguyenHongHiepWPF/CustomerManagement/CustomerManagementWindow.xaml
@@ -4,9 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NguyenHongHiepWPF.CustomerManagement"
+        xmlns:convert="clr-namespace:NguyenHongHiepWPF.Converters"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded"
         Closing="Window_Closing"
         Title="CustomerManagementWindow" Height="500" Width="1000">
+    <Window.Resources>
+        <convert:StatusConverter x:Key="statusConverter"/>
+        <convert:BirthdayConverter x:Key="birthdayConverter"/>
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -27,9 +33,9 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button x:Name="btnReload" Content="Reload" Margin="20 10" Click="btnReload_Click" />
-                <Button x:Name="btnCreate" Content="Create" Margin="20 10" />
-                <Button x:Name="btnUpdate" Content="Update" Margin="20 10" />
-                <Button x:Name="btnDelete" Content="Delete" Margin="20 10" />
+                <Button x:Name="btnCreate" Content="Create" Margin="20 10" Click="btnCreate_Click" />
+                <Button x:Name="btnUpdate" Content="Update" Margin="20 10" Click="btnUpdate_Click" />
+                <Button x:Name="btnDelete" Content="Delete" Margin="20 10" Click="btnDelete_Click" />
             </StackPanel>
         </StackPanel>
         <ListView x:Name="lvCustomers" Grid.Row="1" Grid.Column="0" 
@@ -40,8 +46,10 @@
                     <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding CustomerName}" />
                     <GridViewColumn Header="Telephone" Width="150" DisplayMemberBinding="{Binding Telephone}" />
                     <GridViewColumn Header="Email" Width="300" DisplayMemberBinding="{Binding Email}" />
-                    <GridViewColumn Header="Birthday" Width="150" DisplayMemberBinding="{Binding CustomerBirthday}" />
-                    <GridViewColumn Header="Status" Width="150" DisplayMemberBinding="{Binding CustomerStatus}" />
+                    <GridViewColumn Header="Birthday" Width="150" 
+                                    DisplayMemberBinding="{Binding CustomerBirthday, Converter={StaticResource birthdayConverter}}" />
+                    <GridViewColumn Header="Status" Width="120" 
+                                    DisplayMemberBinding="{Binding CustomerStatus, Converter={StaticResource statusConverter}}" />
                 </GridView>
             </ListView.View>
         </ListView>
