done view transaction detail

--- a/NguyenHongHiepWPF/Admin/AdminDashboardWindow.xaml
+++ b/NguyenHongHiepWPF/Admin/AdminDashboardWindow.xaml
@@ -18,7 +18,7 @@
     <StackPanel>
         <Button x:Name="btnCustomer" Content="Customer Management" Click="btnCustomer_Click" />
         <Button x:Name="btnCar" Content="Car Management" Click="btnCar_Click" />
-        <Button x:Name="btnRenting" Content="Renting Management" />
-        <Button x:Name="btnReport" Content="Statistic Report" />
+        <Button x:Name="btnRenting" Content="Renting Management" Click="btnRenting_Click" />
+        <Button x:Name="btnReport" Content="Statistic Report" Click="btnReport_Click" />
     </StackPanel>
 </Window>
