--- a/NguyenHongHiepWPF/CustomerWindows/CustomerDashboardWindow.xaml
+++ b/NguyenHongHiepWPF/CustomerWindows/CustomerDashboardWindow.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NguyenHongHiepWPF.CustomerWindows"
-        mc:Ignorable="d"
-        Title="CustomerDashboardWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
+        Title="CustomerDashboardWindow" Height="350" Width="600">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="20" />
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="Width" Value="300"/>
+        </Style>
+    </Window.Resources>
+
+    <StackPanel>
+        <Button x:Name="btnViewProfile" Content="View Profile" Click="btnViewProfile_Click" />
+        <Button x:Name="btnUpdateProfile" Content="Update Profile" Click="btnUpdateProfile_Click" />
+        <Button x:Name="btnViewHistory" Content="View Renting History" Click="btnViewHistory_Click" />
+    </StackPanel>
 </Window>
