--- a/NguyenHongHiepWPF/CarManagement/InsertOrUpdateCarWindow.xaml
+++ b/NguyenHongHiepWPF/CarManagement/InsertOrUpdateCarWindow.xaml
@@ -52,8 +52,7 @@
             <ComboBox x:Name="cbSupplier" Grid.Row="8" Grid.Column="1" ItemsSource="{Binding Suppliers}"
                       DisplayMemberPath="SupplierName" SelectedValuePath="SupplierId" SelectedIndex="0"/>
             <Label Grid.Row="9" Grid.Column="0" Content="Price Per Day:" />
-            <TextBox x:Name="txtPricePerDay" Grid.Row="9" Grid.Column="1"
-                     PreviewTextInput="PricePerDayValidation" Text="{Binding Car.CarRentingPricePerDay}"/>
+            <TextBox x:Name="txtPricePerDay" Grid.Row="9" Grid.Column="1" Text="{Binding Car.CarRentingPricePerDay}"/>
         </Grid>
         <Button x:Name="btnSave" Content="Save" Width="60" HorizontalAlignment="Right" Margin="0 10" Click="btnSave_Click" />
     </StackPanel>
