--- a/NguyenHongHiepWPF/RentingManagement/RentingManagementWindow.xaml
+++ b/NguyenHongHiepWPF/RentingManagement/RentingManagementWindow.xaml
@@ -34,9 +34,7 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button x:Name="btnReload" Content="Reload" Margin="20 10" Click="btnReload_Click"/>
                 <Button x:Name="btnViewDetail" Content="View Detail" Margin="20 10" Click="btnViewDetail_Click"/>
-                <Button x:Name="btnCreate" Content="Create" Margin="20 10"/>
-                <Button x:Name="btnUpdate" Content="Update" Margin="20 10"/>
-                <Button x:Name="btnDelete" Content="Delete" Margin="20 10"/>
+                <Button x:Name="btnCreate" Content="Create" Margin="20 10" Click="btnCreate_Click"/>
             </StackPanel>
         </StackPanel>
         <ListView x:Name="lvRentings" Grid.Row="1" Grid.Column="0" 
