changed validation way

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Login.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Login.cshtml
@@ -12,7 +12,7 @@
                 <form method="post">
                     <input type="email" placeholder="Email" asp-for="Email">
                     <input type="password" placeholder="Password" asp-for="Password">
-                    <span asp-validation-for="ErrorMessage" class="text-danger"></span>
+                    @Html.ValidationMessageFor(m => m.ErrorMessage, "", new { @class = "text-danger" })
                     <button>Login</button>
                 </form>
                 <p class="message">Not registered? <a href="Register">Create an Account</a></p>
