--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model NguyenHongHiepRazorPages.Pages.Admin.IndexModel
 @{
+    Layout = "_AdminLayout";
     ViewData["Title"] = "Admin Dashboard";
 }
