--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Create.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Create.cshtml
@@ -15,31 +15,36 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Customer.CustomerName" class="control-label"></label>
-                <input asp-for="Customer.CustomerName" class="form-control" />
-                <span asp-validation-for="Customer.CustomerName" class="text-danger"></span>
+                <label asp-for="Customer.Name" class="control-label"></label>
+                <input asp-for="Customer.Name" class="form-control" />
+                @Html.ValidationMessageFor(m => m.Customer.Name, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Telephone" class="control-label"></label>
-                <input asp-for="Customer.Telephone" class="form-control" />
-                <span asp-validation-for="Customer.Telephone" class="text-danger"></span>
+                <input type="number" asp-for="Customer.Telephone" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Telephone, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Email" class="control-label"></label>
-                <input asp-for="Customer.Email" class="form-control" />
-                <span asp-validation-for="Customer.Email" class="text-danger"></span>
+                <input type="email" asp-for="Customer.Email" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Email, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                <label asp-for="Customer.CustomerBirthday" class="control-label"></label>
-                <input asp-for="Customer.CustomerBirthday" class="form-control" />
-                <span asp-validation-for="Customer.CustomerBirthday" class="text-danger"></span>
+                <label asp-for="Customer.Birthday" class="control-label"></label>
+                <input asp-for="Customer.Birthday" class="form-control" />
+                @Html.ValidationMessageFor(m => m.Customer.Birthday, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Password" class="control-label"></label>
-                <input asp-for="Customer.Password" class="form-control" />
-                <span asp-validation-for="Customer.Password" class="text-danger"></span>
+                <input type="password" asp-for="Customer.Password" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Password, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
+                <label asp-for="Customer.ConfirmPassword" class="control-label"></label>
+                <input type="password" asp-for="Customer.ConfirmPassword" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.ConfirmPassword, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group mt-3 mb-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -47,7 +52,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
