--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/wwwroot/css/style.css
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/wwwroot/css/style.css
@@ -66,3 +66,15 @@ li {
     width: 100%;
     transition: 0.3s ease;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
