--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Delete.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Delete.cshtml
@@ -37,17 +37,11 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Customer.CustomerBirthday)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.CustomerStatus)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerStatus)
-        </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Customer.CustomerId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
     </form>
 </div>
