--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Details.cshtml
@@ -40,11 +40,14 @@
             @Html.DisplayNameFor(model => model.Customer.CustomerStatus)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerStatus)
+            @if (Model.Customer.CustomerStatus == 1)
+            {
+                <span>Active</span>
+            }
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Customer?.CustomerId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-primary" asp-page="./Edit" asp-route-id="@Model.Customer?.CustomerId">Edit</a> |
+    <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
 </div>
