--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Edit.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CustomerManagement/Edit.cshtml
@@ -18,29 +18,30 @@
             <div class="form-group">
                 <label asp-for="Customer.CustomerName" class="control-label"></label>
                 <input asp-for="Customer.CustomerName" class="form-control" />
-                <span asp-validation-for="Customer.CustomerName" class="text-danger"></span>
+                @Html.ValidationMessageFor(m => m.Customer.CustomerName, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Telephone" class="control-label"></label>
-                <input asp-for="Customer.Telephone" class="form-control" />
-                <span asp-validation-for="Customer.Telephone" class="text-danger"></span>
+                <input asp-for="Customer.Telephone" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Telephone, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Email" class="control-label"></label>
-                <input asp-for="Customer.Email" class="form-control" />
-                <span asp-validation-for="Customer.Email" class="text-danger"></span>
+                <input asp-for="Customer.Email" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Email, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.CustomerBirthday" class="control-label"></label>
-                <input asp-for="Customer.CustomerBirthday" class="form-control" />
-                <span asp-validation-for="Customer.CustomerBirthday" class="text-danger"></span>
+                <input type="date" asp-for="Customer.CustomerBirthday" class="form-control" min="1900-01-01"
+                       onfocus="this.max=new Date(new Date().getFullYear() - 18, new Date().getMonth(), new Date().getDate()).toISOString().split('T')[0]" />
+                @Html.ValidationMessageFor(m => m.Customer.CustomerBirthday, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="Customer.Password" class="control-label"></label>
-                <input asp-for="Customer.Password" class="form-control" />
-                <span asp-validation-for="Customer.Password" class="text-danger"></span>
+                <input asp-for="Customer.Password" class="form-control no-space" />
+                @Html.ValidationMessageFor(m => m.Customer.Password, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3 mb-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -48,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
