done search cars by name

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Index.cshtml
@@ -11,6 +11,13 @@
 <p>
     <a class="btn btn-primary" asp-page="Create">Create New</a>
 </p>
+<div>
+    <form method="get">
+        <div class="form-group">
+            <input type="text" name="name" class="form-control" placeholder="Search by name">
+        </div>
+    </form>
+</div>
 <table class="table">
     <thead>
         <tr>
