--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Index.cshtml
@@ -22,6 +22,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.CarInformation[0].CarId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CarInformation[0].CarName)
             </th>
             <th>
@@ -57,6 +60,9 @@
     <tbody>
 @foreach (var item in Model.CarInformation) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CarId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CarName)
             </td>
