--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Delete.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Delete.cshtml
@@ -49,12 +49,6 @@
             @Html.DisplayFor(model => model.CarInformation.Year)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CarInformation.CarStatus)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CarInformation.CarStatus)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarInformation.CarRentingPricePerDay)
         </dt>
         <dd class="col-sm-10">
@@ -77,6 +71,6 @@
     <form method="post">
         <input type="hidden" asp-for="CarInformation.CarId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
     </form>
 </div>
