--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Details.cshtml
@@ -48,12 +48,6 @@
             @Html.DisplayFor(model => model.CarInformation.Year)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CarInformation.CarStatus)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CarInformation.CarStatus)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarInformation.CarRentingPricePerDay)
         </dt>
         <dd class="col-sm-10">
@@ -71,9 +65,18 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CarInformation.Supplier.SupplierName)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CarInformation.CarStatus)
+        </dt>
+        <dd class="col-sm-10">
+            @if (Model.CarInformation.CarStatus == 1)
+            {
+                <span>Active</span>
+            }
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.CarInformation?.CarId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-primary" asp-page="./Edit" asp-route-id="@Model.CarInformation?.CarId">Edit</a> |
+    <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
 </div>
