use admin layout in delete and detail car

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Delete.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Delete.cshtml
@@ -2,6 +2,7 @@
 @model NguyenHongHiepRazorPages.Pages.Admin.CarManagement.DeleteModel
 
 @{
+    Layout = "_AdminLayout";
     ViewData["Title"] = "Delete";
 }
 
