--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/CarManagement/Details.cshtml
@@ -2,6 +2,7 @@
 @model NguyenHongHiepRazorPages.Pages.Admin.CarManagement.DetailsModel
 
 @{
+    Layout = "_AdminLayout";
     ViewData["Title"] = "Details";
 }
 
