done view profile

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model NguyenHongHiepRazorPages.Pages.Member.IndexModel
 @{
+    Layout = "_MemberLayout";
     ViewData["Title"] = "Customer Dashboard";
 }
