--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Shared/_AdminLayout.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Shared/_AdminLayout.cshtml
@@ -19,7 +19,7 @@
                     <li class="header__item"><a asp-page="/Admin/CustomerManagement/Index" class="header__link">Customers</a></li>
                     <li class="header__item"><a asp-page="/Admin/CarManagement/Index" class="header__link">Cars</a></li>
                     <li class="header__item"><a href="#" class="header__link">Rentings</a></li>
-                    <li class="header__item"><a href="#" class="header__link">Report</a></li>
+                    <li class="header__item"><a asp-page="/Admin/ReportStatistic/Index" class="header__link">Report</a></li>
                     <form method="post" asp-page="/Login" asp-page-handler="Logout">
                         <button class="custom-btn-link">Logout</button>
                     </form>
