--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/RentingManagement/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Admin/RentingManagement/Details.cshtml
@@ -2,6 +2,7 @@
 @model NguyenHongHiepRazorPages.Pages.Admin.RentingManagement.DetailsModel
 
 @{
+    Layout = "_AdminLayout";
     ViewData["Title"] = "Details";
 }
 
@@ -11,6 +12,18 @@
     <h4>RentingTransaction</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentingTransaction.Customer)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentingTransaction.Customer.CustomerName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RentingTransaction.Customer.Telephone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RentingTransaction.Customer.Telephone)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RentingTransaction.RentingDate)
         </dt>
@@ -29,15 +42,52 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RentingTransaction.RentingStatus)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RentingTransaction.Customer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RentingTransaction.Customer.CustomerName)
-        </dd>
     </dl>
 </div>
+<hr />
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Details[0].CarId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Details[0].Car.CarName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Details[0].Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Details[0].StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Details[0].EndDate)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Details)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CarId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Car.CarName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.RentingTransaction?.RentingTransationId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-primary" asp-page="./Index">Back to List</a>
 </div>
