--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Profile/Edit.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Profile/Edit.cshtml
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a class="btn btn-outline-primary" asp-page="./Index">Back to List</a>
+    <a class="btn btn-outline-primary" asp-page="./Index">Back</a>
 </div>
 
 @section Scripts {
