--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Shared/_MemberLayout.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Shared/_MemberLayout.cshtml
@@ -17,7 +17,7 @@
             <nav class="header__nav">
                 <ul class="header__menu">
                     <li class="header__item"><a asp-page="/Member/Profile/Index" class="header__link">Profile</a></li>
-                    <li class="header__item"><a href="#" class="header__link">Rentings</a></li>
+                    <li class="header__item"><a asp-page="/Member/Renting/Index" class="header__link">Rentings</a></li>
                     <form method="post" asp-page="/Login" asp-page-handler="Logout">
                         <button class="custom-btn-link">Logout</button>
                     </form>
