get user from session instead of using query string

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Profile/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/Pages/Member/Profile/Index.cshtml
@@ -51,5 +51,5 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-primary" asp-page="./Edit" asp-route-id="@Model.Customer?.CustomerId">Edit</a>
+    <a class="btn btn-primary" asp-page="./Edit">Edit</a>
 </div>
