changed business logic of renting cars

--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
@@ -92,7 +92,7 @@
                     </td>
                     <td>
                         <form method="post" asp-page-handler="Delete">
-                            <input type="hidden" name="id" value="@item.CarId">
+                            <input type="hidden" name="index" value="@item.Index">
                             <button class="btn btn-danger">Delete</button>
                         </form>
                     </td>
