--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/ChooseCars.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/ChooseCars.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Admin.RentingManagement.ChooseCarsModel
+@model NguyenHongHiepSignalR.Pages.Admin.RentingManagement.ChooseCarsModel
 @{
     Layout = "_AdminLayout";
     ViewData["Title"] = "Choose Cars";
