--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/ChooseCustomer.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/ChooseCustomer.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Admin.RentingManagement.ChooseCustomerModel
+@model NguyenHongHiepSignalR.Pages.Admin.RentingManagement.ChooseCustomerModel
 @{
     Layout = "_AdminLayout";
     ViewData["Title"] = "Choose Customer";
