--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/ReportStatistic/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/ReportStatistic/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Admin.ReportStatistic.IndexModel
+@model NguyenHongHiepSignalR.Pages.Admin.ReportStatistic.IndexModel
 @{
     Layout = "_AdminLayout";
     ViewData["Title"] = "Report Statistic";
