--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Profile/Edit.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Profile/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Member.Profile.EditModel
+@model NguyenHongHiepSignalR.Pages.Member.Profile.EditModel
 
 @{
     Layout = "_MemberLayout";
