--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Member.Renting.ChooseCarsModel
+@model NguyenHongHiepSignalR.Pages.Member.Renting.ChooseCarsModel
 @{
     ViewData["Title"] = "ChooseCars";
     Layout = "_MemberLayout";
