--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Member.Renting.DetailsModel
+@model NguyenHongHiepSignalR.Pages.Member.Renting.DetailsModel
 @{
     Layout = "_MemberLayout";
     ViewData["Title"] = "Details";
