--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Member.Renting.IndexModel
+@model NguyenHongHiepSignalR.Pages.Member.Renting.IndexModel
 @{
     Layout = "_MemberLayout";
     ViewData["Title"] = "Rentings";
