--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/Details.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Admin.RentingManagement.DetailsModel
+@model NguyenHongHiepSignalR.Pages.Admin.RentingManagement.DetailsModel
 
 @{
     Layout = "_AdminLayout";
