--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Admin/RentingManagement/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Admin.RentingManagement.IndexModel
+@model NguyenHongHiepSignalR.Pages.Admin.RentingManagement.IndexModel
 
 @{
     Layout = "_AdminLayout";
