--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Profile/Index.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model NguyenHongHiepRazorPages.Pages.Member.Profile.IndexModel
+@model NguyenHongHiepSignalR.Pages.Member.Profile.IndexModel
 @{
     ViewData["Title"] = "Profile";
     Layout = "_MemberLayout";
