added signalr to car list in renting on customer page

--- a/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
+++ b/NguyenHongHiep_NET1601_A03/NguyenHongHiepSignalR/Pages/Member/Renting/ChooseCars.cshtml
@@ -124,3 +124,8 @@
         }
     });
 </script>
+
+@section Scripts {
+    <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/customer-car-signalr.js"></script>
+}
